# cmake_cpp_starter_pack

./: LICENSE  README.md  configure.py
template_files/: CMakeLists.txt  configure
template_files/src/: tttAppNamettt.cpp
